--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "url": "https://github.com/mise-en-place/tools.font-scale.git"
   },
   "author": "Kind",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "mep-tools.type-config": "github:mise-en-place/tools.type-config",
+    "mep-tools.rem-calc": "github:mise-en-place/tools.rem-calc",
+    "mep-tools.map-get-if-exists": "github:mise-en-place/tools.map-get-if-exists",
+  }
 }
